주문 서비스 규칙 테스트 코드 작성